fix: patient search title spacing

--- a/src/components/activities/searchPatientActivity/styles.scss
+++ b/src/components/activities/searchPatientActivity/styles.scss
@@ -193,6 +193,7 @@
     }
     .searchPatient__results_count {
       font-size: x-large;
+      margin: 20px;
     }
   }
 
